Update CSS project index page. Fix overflow and spacing

--- a/app/assets/stylesheets/components/nav_bar.scss
+++ b/app/assets/stylesheets/components/nav_bar.scss
@@ -137,7 +137,7 @@ form.search-form button:nth-child(2) {
   font-size: 17px;
   // border-left: none;
   cursor: pointer;
-  margin-right: 15px;
+  // margin-right: 15px;
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
   border-left: none;
@@ -163,7 +163,7 @@ form.search-form button:nth-child(2) {
   border-radius: 4px;
   border: 1px solid lightgrey;
   height: 29px;
-  width: 172px;
+  width: 145px;
   text-align: center;
   margin-left: 15px;
   padding-top: 0px;
