--- a/app/assets/stylesheets/components/project_index.scss
+++ b/app/assets/stylesheets/components/project_index.scss
@@ -86,7 +86,12 @@
 
 
 .project-content {
-  margin-bottom: 15px;  
+  // margin-bottom: 15px;  
+  display: flex;
+  flex-direction: column;
+  height: 90px;
+  justify-content: space-around;
+
 }
 
 .project-content > h4 {
@@ -95,6 +100,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  margin: 0;
 }
 
 #project-img {
@@ -135,7 +141,7 @@
   align-items: center;
   display: flex;
   width: 285px;
-  height: 107px;
+  height: 90px;
 }
 
 #project-icon {
